--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </div>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Senior Software Engineer</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineering Manager
+            </p>
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Boston, MA</p>
             <hr>
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills and
@@ -149,55 +150,58 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-bolt fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Objective</h2>
           <div class="w3-container">
-            <p>As a Tech Lead with over <strong>10+ years of experience</strong> specializing in backend development and
-              5+ years in full-stack roles, I bring a proven track record of success in guiding and leading software
-              engineering teams. Proficient in
-              Java, Php,GraphQL,Kafka, TypeScript, and React, I excel in designing and implementing scalable solutions
-              while effectively collaborating with cross-functional teams.
-              I have demonstrated expertise in driving project success, fostering team collaboration, and staying
-              abreast of emerging technologies. I am eager to contribute my leadership skills and technical proficiency
-              to advance innovative software solutions in a challenging role.</p>
+            <p>As a Software Engineering Manager with over 11 years of experience in backend development and full-stack
+              engineering, I
+              lead high- performance teams to create scalable, high-quality software solutions. My technical expertise
+              includes GCP,
+              Java, PHP, GraphQL, Kafka, and Typescript, allowing me to guide architectural decisions while ensuring
+              alignment with
+              business objectives.
+              With a strong background in system design and cross-functional collaboration, I have successfully led
+              complex projects
+              from inception to delivery, mentoring engineers along the way, and fostering a culture of continuous
+              learning and
+              technical excellence. I am passionate about building resilient systems, empowering teams, and staying at
+              the forefront
+              of emerging technologies.</p>
           </div>
         </div>
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Senior Software Engineer| Tech Lead / Wayfair</b></h5>
+            <h5 class="w3-opacity"><b>Software Engineering Manager / Wayfair</b></h5>
             <span class="w3-tag w3-green">Boston, MA</span>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
-              <li>As a <strong>Technical Lead Full Stack Engineer</strong> in the post-order team, I lead and enhanced
-                the
-                workflow platform, enabling customers and agents to seamlessly handle post-order issues such as
-                cancellations, buyer's
-                remorse, shipping address changes, and delivery method modifications.</li>
-
-              <li>Worked as a <strong>Lead Backend Engineer</strong> in the Customer Assurance team, driving key
-                initiatives to
-                reduce customer contacts by delivering proactive and timely communications via emails and SMS.</li>
-
-              <li>Led the integration of workflow platforms into Partner Home, eliminating dependency on agents for
-                issue resolution and
-                empowering suppliers to provide assistance, replacement parts, and discounts directly.</li>
-
-              <li>Optimized the returns workflow, reducing operational costs and saving Wayfair <strong>~$3.8M</strong>
-                by waiving return shipping
-                fees for store credit mattress returns.</li>
-
-              <li>Architected and migrated support ticketing to a dedicated subgraph, improving system scalability,
-                modularity, and
-                operational efficiency across teams.</li>
-
-              <li>Enhanced payment workflows by integrating with payment gateway platforms (Stripe and Braintree),
-                streamlining refund and transaction-heavy processes, and improving customer payment experiences.</li>
-
-              <li>Implemented real-time observability enhancements, including Datadog logging and dashboards, improving
-                issue tracking, debugging efficiency, and workflow stability.</li>
-
-              <li>Mentored junior engineers, led knowledge-sharing sessions, and contributed to team growth by
-                conducting engineering interviews and reviewing RFCs.</li>
+              <li>Lead a team of 15 engineers, driving delivery of scalable, customer- centric software solutions while
+                fostering a high-performing and collaborative team culture.</li>
+              <li>
+                Owned critical initiatives within the Partner home Portal, enabling suppliers to directly fulfill
+                customer needs through streamlined workflows for replacement parts, units, and support.
+              </li>
+              <li>
+                Drove strategic alignment by partnering with the Payments team to integrate a novel, standardized
+                payment architecture across all post- order workflows, ensuring consistency, security, and long-term
+                scalability.
+              </li>
+              <li>
+                Architected and delivered robust backend systems that overhauled the returns process—resulting in $3.8M
+                in annual cost savings and significant operational improvements.
+              </li>
+              <li>
+                Elevated engineering effectiveness by implementing real-time observability using Datadog and proactively
+                building dashboards and alerts for key microservices.
+              </li>
+              <li>
+                Contributed to technical strategy and planning through active participation in RFCs and architectural
+                discussions, ensuring scalable solutions aligned with business goals.
+              </li>
+              <li>
+                Advocated for engineering best practices, leading code reviews and establishing a strong quality-focused
+                development culture across the organization.
+              </li>
             </ul>
             <hr>
           </div>
