--- a/index.html
+++ b/index.html
@@ -7,22 +7,116 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-  html,
-  body,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: "Roboto", sans-serif
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    font-family: "Roboto", sans-serif;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  /* Sticky Navigation */
+  .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: #009688;
+    padding: 10px 0;
+    transition: background-color 0.3s;
+  }
+
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    transition: opacity 0.3s;
+  }
+
+  .navbar a:hover {
+    opacity: 0.8;
+  }
+
+  /* Dark mode styles */
+  body.dark-mode {
+    background-color: #333;
+    color: #fff;
+  }
+
+  .dark-mode .w3-white {
+    background-color: #444 !important;
+    color: #fff !important;
+  }
+
+  .dark-mode .w3-text-grey {
+    color: #ddd !important;
+  }
+
+  /* Theme toggle button */
+  #theme-toggle {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    z-index: 1001;
+    padding: 10px;
+    border-radius: 50%;
+    border: none;
+    background: #009688;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  #theme-toggle:hover {
+    background: #007166;
+  }
+
+  /* Skills categories */
+  .skills-category {
+    margin-bottom: 20px;
+  }
+
+  .skills-category h4 {
+    color: #009688;
+    margin-bottom: 10px;
+  }
+
+  /* Content padding for fixed navbar */
+  .content-wrapper {
+    padding-top: 60px;
+  }
+
+  /* Smooth transitions */
+  .w3-container,
+  .w3-card {
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+
+  .w3-container:hover,
+  .w3-card:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 </style>
 
 <body class="w3-light-grey">
+  <!-- Navigation Bar -->
+  <div class="navbar">
+    <a href="#about">About</a>
+    <a href="#experience">Experience</a>
+    <a href="#education">Education</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </div>
+
+  <!-- Theme Toggle Button -->
+  <button id="theme-toggle">
+    <i class="fa fa-moon-o"></i>
+  </button>
 
   <!-- Page Container -->
-  <div class="w3-content w3-margin-top" style="max-width:1400px;">
+  <div class="w3-content w3-margin-top content-wrapper" style="max-width:1400px;">
 
     <!-- The Grid -->
     <div class="w3-row-padding">
@@ -44,97 +138,97 @@
             <hr>
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills and
                 Technologies</b></p>
-            <p>Java</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+
+            <div class="skills-category">
+              <h4><i class="fa fa-code w3-margin-right"></i>Programming Languages</h4>
+              <p>Java</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">Expert</div>
+              </div>
+              <p>PHP</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">Intermediate</div>
+              </div>
+              <p>TypeScript</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">Intermediate</div>
+              </div>
             </div>
-            <p>PHP</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+
+            <div class="skills-category">
+              <h4><i class="fa fa-cloud w3-margin-right"></i>Cloud & Infrastructure</h4>
+              <p>Google Cloud Platform (GCP)</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">Expert</div>
+              </div>
+              <p>Docker</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">Advanced</div>
+              </div>
+              <p>Kubernetes</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">Advanced</div>
+              </div>
+              <p>Terraform</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">Intermediate</div>
+              </div>
             </div>
-            <p>Typescript</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+
+            <div class="skills-category">
+              <h4><i class="fa fa-database w3-margin-right"></i>Databases & Data</h4>
+              <p>MySQL and GBQ</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">Advanced</div>
+              </div>
+              <p>Aerospike</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">Intermediate</div>
+              </div>
+              <p>Data Build Tool (DBT)</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">Advanced</div>
+              </div>
             </div>
-            <p>React</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+
+            <div class="skills-category">
+              <h4><i class="fa fa-cogs w3-margin-right"></i>DevOps & Monitoring</h4>
+              <p>Datadog</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">Expert</div>
+              </div>
+              <p>Grafana</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">Expert</div>
+              </div>
+              <p>Kibana</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">Expert</div>
+              </div>
+              <p>Splunk</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">Intermediate</div>
+              </div>
             </div>
-            <p>Docker</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>Kubernetes</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>Istio</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>Terraform</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-            </div>
-            <p>Graph QL</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
-            </div>
-            <p>Google Cloud Platform (GCP)</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
-            </div>
-            <p>Apollo (Server & Client)</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>Data Build Tool (DBT)</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>Airflow</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>Aerospike</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-            </div>
-            <p>Kafka</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>My SQL and GBQ</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
-            </div>
-            <p>Kibana</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
-            </div>
-            <p>Datadog</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
-            </div>
-            <p>Grafana</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
-            </div>
-            <p>Splunk</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-            </div>
-            <p>Git</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
-            </div>
-            <p>SVN</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
-            </div>
-            <p>Jira</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+
+            <div class="skills-category">
+              <h4><i class="fa fa-code-fork w3-margin-right"></i>Tools & Frameworks</h4>
+              <p>Git</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">Expert</div>
+              </div>
+              <p>GraphQL</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">Expert</div>
+              </div>
+              <p>Apollo (Server & Client)</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">Advanced</div>
+              </div>
+              <p>Jira</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">Expert</div>
+              </div>
             </div>
             <br>
           </div>
@@ -146,7 +240,7 @@
       <!-- Right Column -->
       <div class="w3-twothird">
 
-        <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <div id="about" class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-bolt fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Objective</h2>
           <div class="w3-container">
@@ -166,7 +260,7 @@
               of emerging technologies.</p>
           </div>
         </div>
-        <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <div id="experience" class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
@@ -258,7 +352,7 @@
           </div>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <div id="education" class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
           <div class="w3-container">
@@ -290,21 +384,76 @@
     <!-- End Page Container -->
   </div>
 
-  <footer class="w3-container w3-teal w3-center w3-margin-top">
-    <table style="width:100%">
-      <tr>
-        <td>
-          <p><a href="./AdityaNarainResume.pdf" download>Download my resume in PDF</a></p>
-        </td>
-        <td>
-          <p><a href="./AdityaNarainResume.txt" download>Download my resume in Text</a></p>
-        </td>
-      </tr>
-    </table>
-    <a href="https://www.linkedin.com/in/adityanarain1989/" class="fa fa-linkedin w3-xlarge w3-hover-opacity"></a>
-    <a href="https://github.com/aditya-narain" class="fa fa-github w3-xlarge w3-hover-opacity"></a>
-    <a href="https://www.facebook.com/adi.narain" class="fa fa-facebook w3-xlarge w3-hover-opacity"></a>
+  <footer id="contact" class="w3-container w3-teal w3-center w3-margin-top">
+    <div class="w3-padding-32">
+      <div class="w3-row-padding" style="margin:0 -16px">
+        <div class="w3-half">
+          <h3>Download Resume</h3>
+          <div class="w3-padding-16">
+            <a href="./AdityaNarainResume.pdf" class="w3-button w3-white w3-round-large" download>
+              <i class="fa fa-file-pdf-o w3-margin-right"></i>Download PDF
+            </a>
+            <a href="./AdityaNarainResume.txt" class="w3-button w3-white w3-round-large" download>
+              <i class="fa fa-file-text-o w3-margin-right"></i>Download Text
+            </a>
+          </div>
+        </div>
+        <div class="w3-half">
+          <h3>Connect With Me</h3>
+          <div class="w3-padding-16">
+            <a href="https://www.linkedin.com/in/adityanarain1989/"
+              class="w3-button w3-white w3-round-large w3-margin-right">
+              <i class="fa fa-linkedin w3-margin-right"></i>LinkedIn
+            </a>
+            <a href="https://github.com/aditya-narain" class="w3-button w3-white w3-round-large w3-margin-right">
+              <i class="fa fa-github w3-margin-right"></i>GitHub
+            </a>
+            <a href="https://www.facebook.com/adi.narain" class="w3-button w3-white w3-round-large">
+              <i class="fa fa-facebook w3-margin-right"></i>Facebook
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
+
+  <script>
+    // Theme toggle functionality
+    const themeToggle = document.getElementById('theme-toggle');
+    const body = document.body;
+    const icon = themeToggle.querySelector('i');
+
+    themeToggle.addEventListener('click', () => {
+      body.classList.toggle('dark-mode');
+      if (body.classList.contains('dark-mode')) {
+        icon.classList.remove('fa-moon-o');
+        icon.classList.add('fa-sun-o');
+      } else {
+        icon.classList.remove('fa-sun-o');
+        icon.classList.add('fa-moon-o');
+      }
+    });
+
+    // Smooth scroll for navigation links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
+    });
+
+    // Navbar background change on scroll
+    window.addEventListener('scroll', () => {
+      const navbar = document.querySelector('.navbar');
+      if (window.scrollY > 50) {
+        navbar.style.backgroundColor = 'rgba(0, 150, 136, 0.95)';
+      } else {
+        navbar.style.backgroundColor = '#009688';
+      }
+    });
+  </script>
 
 </body>
 
